--- a/src/app/components/mapa/mapa.component.html
+++ b/src/app/components/mapa/mapa.component.html
@@ -1,6 +1,8 @@
 <mat-card>
     <mat-card-title>Mapa</mat-card-title>
     <mat-card-content>
-        xyz
+        <div id="mapa-mapbox">
+
+        </div>
     </mat-card-content>
 </mat-card>
